add devise gem, add user_widget partial

--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -4,6 +4,7 @@
   <div class="row">
     <div id="sidebar" class="col-xs-3">
       <%= render 'filter_form' %>
+      <%= render 'users/user_widget' %>
     </div>
 
     <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
