--- a/app/views/videos/_each_video_handlebar.html.erb
+++ b/app/views/videos/_each_video_handlebar.html.erb
@@ -11,6 +11,41 @@
         {{title_korean}}
       </div>
     </a>
+    
+    <div class="details">
+      {{youtube_user_id}} | {{category}} | {{duration}} seconds | {{upload_date}}
+    </div>
+
+    <div class="stats">
+      Views: {{youtube_views}} |
+      Upvotes: {{upvotes}} |
+      Downvotes: {{downvotes}}
+    </div>
+
+    <div class="kpop_fields">
+      Hotness: {{hotness}} |
+      Cheesiness : {{cheesiness}} |
+
+    </div>
+
+    <div class="tags">
+      {{#if official}}
+        <span class="video_tag video_tag_official">Official</span>
+      {{/if}}
+
+      {{#if caption}}
+        <span class="video_tag video_tag_caption">Caption</span>
+      {{/if}}
+
+      {{#if english_subtitle}}
+        <span class="video_tag video_tag_english_subtitle">English Subtitle</span>
+      {{/if}}
+
+      {{#if licensed_content}}
+        <span class="video_tag video_tag_licensed_content">Licensed Content</span>
+      {{/if}}
+    </div>
+
   </li>
   {{/each}}
 </script>
