--- a/app/views/videos/_filter_form.html.erb
+++ b/app/views/videos/_filter_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag("/videos/filters", name: 'filters') do %>
 
-  <input id="page" name="page" value=1>
+  <input id="page" name="page" value=1 type="hidden">
 
   <div class="filter">
     Sort by
