search and detailed page added

--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -35,6 +35,18 @@ body {
   width: 140px;
 }
 
+.filter {
+  padding-top: 10px;
+}
+
+.video_desc {
+  display: none;
+}
+
+.popup-desc {
+  padding: 7px 5px;
+}
+
 .video_tag {
   color: white;
   padding: 2px 5px;
