--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -15,6 +15,7 @@
             <div>
               <iframe id="iframe" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
             </div>
+            <div id="popup_details"></div>
           </div>
         </div>
       </div>
