--- a/app/views/videos/_each_video_handlebar.html.erb
+++ b/app/views/videos/_each_video_handlebar.html.erb
@@ -7,28 +7,32 @@
         <img src="{{thumbnail}}">
       </div>
 
-      <div class="thumbnail_title">
+      <div class="thumbnail_title popup">
         {{title_korean}}
       </div>
     </a>
-    
-    <div class="details">
+
+
+    <div class="video_desc popup">
+      {{description}}
+    </div>
+
+    <div class="details popup">
       {{youtube_user_id}} | {{category}} | {{duration}} seconds | {{upload_date}}
     </div>
 
-    <div class="stats">
+    <div class="stats popup">
       Views: {{youtube_views}} |
       Upvotes: {{upvotes}} |
       Downvotes: {{downvotes}}
     </div>
 
-    <div class="kpop_fields">
+    <div class="kpop_fields popup">
       Hotness: {{hotness}} |
-      Cheesiness : {{cheesiness}} |
-
+      Cheesiness : {{cheesiness}}
     </div>
 
-    <div class="tags">
+    <div class="tags popup">
       {{#if official}}
         <span class="video_tag video_tag_official">Official</span>
       {{/if}}
@@ -45,6 +49,8 @@
         <span class="video_tag video_tag_licensed_content">Licensed Content</span>
       {{/if}}
     </div>
+
+
 
   </li>
   {{/each}}
