--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the main controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.cards {
+	margin: 0 auto;
+ 	width: 100%;          
+}
+
+.box {
+	display: inline-block;
+	margin: 10px;
+	width: 350px;
+	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+	border-radius: 7px;
+	text-align: center;
+}
