--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,40 @@
-<h1>Main#index</h1>
-<p>Find me in app/views/main/index.html.erb</p>
+<div id="notice"></div>
+
+<div id="main-container" class="container-fluid">
+  <div class="row">
+    <div id="sidebar" class="col-xs-3">
+      <%= render 'left_menu' %>
+    </div>    
+
+    <div id="main-content" class="col-xs-9">
+      <div class="header_panel row">
+        <div id="numResults" class="col-md-6">7160 results</div>
+        <div class="dropdown col-md-2">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">SORT <span class="caret"></span></button>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Default</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sexiness</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Cheesiness</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Approval Rating</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Youtube Views</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Most Recent First</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Oldest First</a></li>
+            </ul>
+        </div>
+
+        <div class="col-md-3">
+          <%= render 'view_menu_box' %>
+        </div>
+      </div>
+      <div id="cards" class="cards transitions-enabled row">
+        <% @videos.each do |video| %>
+          <%= render 'video_card2', :video => video %>
+        <% end %>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
