added video dialog

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,6 +6,8 @@
       <%= render 'left_menu' %>
     </div>    
 
+    <%= render 'video_dialog' %>
+
     <div id="main-content" class="col-xs-9">
       <div class="header_panel row">
         <div id="numResults" class="col-md-6">7160 results</div>
