add approval rating, upvotes per views, likes to db, sort_by

--- a/app/views/videos/_each_video_handlebar.html.erb
+++ b/app/views/videos/_each_video_handlebar.html.erb
@@ -24,7 +24,8 @@
     <div class="stats popup">
       Views: {{youtube_views}} |
       Upvotes: {{upvotes}} |
-      Downvotes: {{downvotes}}
+      Downvotes: {{downvotes}} |
+      Approval Rating: {{approval_rating}}
     </div>
 
     <div class="kpop_fields popup">
