--- a/app/views/videos/_filter_form.html.erb
+++ b/app/views/videos/_filter_form.html.erb
@@ -14,6 +14,9 @@
                            ['Views', 'youtube_views'],
                            ['Upvote', 'upvotes'],
                            ['Recent', 'upload_date'],
+                           ['Hotness', 'hotness'],
+                           ['Cheesiness', 'cheesiness'],
+                           ['Approval Rating', 'approval_rating']
                        ]))
     %>
   </div>
