category rake order change, add like, approval rating, upvotes per views to controller, show, form

--- a/app/views/videos/_filter_form.html.erb
+++ b/app/views/videos/_filter_form.html.erb
@@ -36,6 +36,11 @@
     <input type="number" name="english_percentage[max]" class="number_input" value=100>
   </div>
 
+  <div class="filter"><span class='filter_title'>Approval Rating</span>
+    <input type="number" name="approval_rating[min]" class="number_input" value=0> -
+    <input type="number" name="approval_rating[max]" class="number_input" value=100>
+  </div>
+
   <div class="filter">
     <input type="checkbox" name="english_subtitle"> English Subtitle<br>
     <input type="checkbox" name="official"> Official <br>
