--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -100,6 +100,21 @@
   </div>
 
   <div class="field">
+    <%= f.label :approval_rating %><br>
+    <%= f.number_field :approval_rating %>
+  </div>
+
+  <div class="field">
+    <%= f.label :upvotes_per_views %><br>
+    <%= f.number_field :upvotes_per_views %>
+  </div>
+
+  <div class="field">
+    <%= f.label :likes %><br>
+    <%= f.number_field :likes %>
+  </div>
+
+  <div class="field">
     <%= f.label :upvotes %><br>
     <%= f.number_field :upvotes %>
   </div>
