--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -100,6 +100,20 @@
   <%= @video.licensed_content %>
 </p>
 
+<p>
+  <strong>approval_rating:</strong>
+  <%= @video.approval_rating %>
+</p>
+
+<p>
+  <strong>upvotes_per_views:</strong>
+  <%= @video.upvotes_per_views %>
+</p>
+
+<p>
+  <strong>likes:</strong>
+  <%= @video.likes %>
+</p>
 
 <p>
   <strong>Upvotes:</strong>
