--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -1,1 +1,12 @@
-_left_menu.html.erb
+<div id="left-menu">
+	<div class="menu_item row">
+		<div>Artist</div>
+		<div class="dropdown">
+            <button class="btn btn-default dropdown-toggle" type="button" id="ddArtist" data-toggle="dropdown" aria-expanded="true">All <span class="caret"></span></button>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Girl's Generation</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Psy</a></li>              
+            </ul>
+        </div>		
+	</div>		
+</div>
