update ui modules on left menu

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,8 @@
  *= require 'masonry/transitions'
  *= require_tree .
  *= require_self
+ *= require bootstrap-slider
+ *= require bootstrap3-switch
  */
 
 
