--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,6 +3,11 @@
 <div id="main-container" class="container-fluid">
   <div class="row">
     <div id="sidebar" class="col-xs-3">
+      <div class="top_bar row">
+        <h2 class="titleFilter">Filters</h2>
+        <hr></hr>
+      </div>
+
       <%= render 'left_menu' %>
     </div>    
 
