adapt color on button

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -18,6 +18,26 @@
 	width: 180px;
 }
 
+//slider
+#ipNumSingers .slider-selection {
+	background: rgb(116,200,206);
+}
+#ipNumSingers .slider-handle {
+	background: rgb(255,255,255);
+}
+#ipYears .slider-selection {
+	background: rgb(116,200,206);
+}
+#ipYears .slider-handle {
+	background: rgb(255,255,255);
+}
+#ipScore .slider-selection {
+	background: rgb(116,200,206);
+}
+#ipScore .slider-handle {
+	background: rgb(255,255,255);
+}
+
 .strVar {
 	font-size: 10px;
 	margin-top: 12px;
