--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -18,7 +18,7 @@
 		<div class="row">
 			<div class="col-md-8">Number of Singers</div><div class="strVar">3 - 5</div>
 		</div>
-		<input id="ipNumSingers" name="interval-slider" type="text" class="span2" value="" data-slider-min="1" data-slider-max="7" data-slider-step="1" data-slider-value="[1,7]"/>
+		<input name="interval-slider" type="text" class="span2" value="" data-slider-id="ipNumSingers" data-slider-min="1" data-slider-max="7" data-slider-step="1" data-slider-value="[1,7]"/>
 	</div>
 
 	<div class="menu_item row">
@@ -39,30 +39,30 @@
 
     <div class="menu_item row">
     	<div>English Subtitle</div>
-    	<input type="checkbox" name="toggle-checkbox" checked>
+    	<input type="checkbox" name="toggle-checkbox" data-size="small" data-on-color="info" checked>
     </div>
 
     <div class="menu_item row">
     	<div>Official Video</div>
-    	<input type="checkbox" name="toggle-checkbox" checked>
+    	<input type="checkbox" name="toggle-checkbox" data-size="small" data-on-color="info" checked>
     </div>
 
     <div class="menu_item row">
     	<div>HD Video</div>
-    	<input type="checkbox" name="toggle-checkbox" checked>
+    	<input type="checkbox" name="toggle-checkbox" data-size="small" data-on-color="info" checked>
     </div>
 
     <div class="menu_item row">
     	<div class="row">
 			<div class="col-md-8">Year</div><div class="strVar">2000 - 2015</div>
 		</div>
-    	<input id="ipYears" name="interval-slider" type="text" class="span2" value="" data-slider-min="2000" data-slider-max="2015" data-slider-step="1" data-slider-value="[2000,2015]"/>
+    	<input name="interval-slider" type="text" class="span2" value="" data-slider-id="ipYears" data-slider-min="2000" data-slider-max="2015" data-slider-step="1" data-slider-value="[2000,2015]"/>
     </div>
 
     <div class="menu_item row">
     	<div class="row">
 			<div class="col-md-8">Score</div><div class="strVar">0 - 100</div>
 		</div>
-    	<input id="ipScore" name="interval-slider" type="text" class="span2" value="" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
+    	<input name="interval-slider" type="text" class="span2" value="" data-slider-id="ipScore" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
     </div>
 </div>
