fix to weird dropdown comp

--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -5,7 +5,7 @@
 		</div>
 		<div class="row">
 			<div class="dropdown col-md-4">
-	            <button class="btn btn-default dropdown-toggle" type="button" id="ddArtist" data-toggle="dropdown" aria-expanded="true">All <span class="caret"></span></button>
+	            <button class="btn btn-default dropdown-toggle" type="button" id="ddArtist" data-toggle="dropdown" aria-expanded="true"><span class="selection">All</span> <span class="caret"></span></button>
 	            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 	              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Girl's Generation</a></li>
 	              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Psy</a></li>              
@@ -27,7 +27,7 @@
 		</div>
 		<div class="row">
 			<div class="dropdown col-md-4">
-	            <button class="btn btn-default dropdown-toggle" type="button" id="ddVideoType" data-toggle="dropdown" aria-expanded="true">All <span class="caret"></span></button>
+	            <button class="btn btn-default dropdown-toggle" type="button" id="ddVideoType" data-toggle="dropdown" aria-expanded="true"><span class="selection">All</span> <span class="caret"></span></button>
 	            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu2">
 	              	<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Music Video</a></li>
 	              	<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Live Performance</a></li>
