--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -22,7 +22,7 @@
       <div class="header_panel row">
         <div class="numResults col-md-6">7160 results</div>
         <div class="dropdown col-md-2">
-            <button class="btnSort btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">SORT <span class="caret"></span></button>
+            <button class="btnSort btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true"><span class="selection">SORT</span> <span class="caret"></span></button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
               <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Default</a></li>
               <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sexiness</a></li>
