--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,6 +4,7 @@
 
 #sidebar {
 	background: rgb(48,64,79);
+	width: 310px;
 	height: 1000px;
 	color: rgb(255,255,255);
 	padding-left: 30px;
@@ -13,9 +14,23 @@
 	margin: 20px;
 }
 
-.dropdown-menu {
+#sidebar .dropdown button{
+	box-sizing: border-box;		
+	width: 210px;	
+	height: 35px;
+	background-color: rgb(48,64,79);			
+	border: 1px solid rgb(255,255,255);
+	color: rgb(255,255,255);
+}
+
+
+#sidebar .dropdown-menu {
 	background: rgb(48,64,79);
-	width: 180px;
+	width: 180px;	
+}
+
+#sidebar .dropdown-menu a {
+	color: rgb(255,255,255);
 }
 
 //slider
