--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,12 +7,14 @@
 }
 
 #sidebar {
+	position: absolute;
+	left: 0;
 	display: block;
 	background: rgb(48,64,79);
 	width: 270px;
 	height: 1000px;
 	color: rgb(255,255,255);
-	padding-left: 45px;
+	padding-left: 40px;
 }
 
 .menu_item {
@@ -69,6 +71,10 @@
 }
 
 #main-content {
+	position: absolute;
+	left: 270px;
+	width: 100%;
+	height: 100%;
 	display: block;
 	background-color: rgb(237,237,237);
 	padding-left: 40px;
@@ -123,8 +129,7 @@
 }
 
 .header_panel .dropdown .dropdown-menu {
-	background-color: rgb(48,64,79);
-	border: 1px solid #ccc;
+	background-color: rgb(48,64,79);	
 	border-radius: 3px;	
 	margin-left: 16px;
 }
