ing.. not working. do not download

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -53,6 +53,18 @@
 #ipNumSingers .slider-handle {
 	background: rgb(255,255,255);
 }
+#ipEP .slider-selection {
+	background: rgb(116,200,206);
+}
+#ipEP .slider-handle {
+	background: rgb(255,255,255);
+}
+#ipAR .slider-selection {
+	background: rgb(116,200,206);
+}
+#ipAR .slider-handle {
+	background: rgb(255,255,255);
+}
 #ipYears .slider-selection {
 	background: rgb(116,200,206);
 }
