--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -18,7 +18,7 @@
 		<div class="row">
 			<div class="col-md-8">Number of Singers</div><div class="strVar">3 - 5</div>
 		</div>
-		<input name="interval-slider" type="text" class="span2" value="" data-slider-id="ipNumSingers" data-slider-min="1" data-slider-max="7" data-slider-step="1" data-slider-value="[1,7]"/>
+		<input name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipNumSingers" data-slider-min="1" data-slider-max="7" data-slider-step="1" data-slider-value="[1,7]"/>
 	</div>
 
 	<div class="menu_item row">
@@ -53,16 +53,35 @@
     </div>
 
     <div class="menu_item row">
+    	<div>Licensed Content</div>
+    	<input type="checkbox" name="toggle-checkbox" data-size="small" data-on-color="info" checked>
+    </div>
+
+    <div class="menu_item row">
+    	<div class="row">
+			<div class="col-md-8">English percentage</div><div class="strVar">0 - 100</div>
+		</div>
+    	<input name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipEP" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
+    </div>
+
+    <div class="menu_item row">
+    	<div class="row">
+			<div class="col-md-8">Approval Rating</div><div class="strVar">0 - 100</div>
+		</div>
+    	<input name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipAR" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
+    </div>
+
+    <div class="menu_item row">
     	<div class="row">
 			<div class="col-md-8">Year</div><div class="strVar">2000 - 2015</div>
 		</div>
-    	<input name="interval-slider" type="text" class="span2" value="" data-slider-id="ipYears" data-slider-min="2000" data-slider-max="2015" data-slider-step="1" data-slider-value="[2000,2015]"/>
+    	<input name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipYears" data-slider-min="2000" data-slider-max="2015" data-slider-step="1" data-slider-value="[2000,2015]"/>
     </div>
 
     <div class="menu_item row">
     	<div class="row">
 			<div class="col-md-8">Score</div><div class="strVar">0 - 100</div>
 		</div>
-    	<input name="interval-slider" type="text" class="span2" value="" data-slider-id="ipScore" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
+    	<input name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipScore" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
     </div>
 </div>
