--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -14,6 +14,13 @@ body {
   margin: 20px auto;
 }
 
+.title_input {
+  width: 400px;
+  padding: 3px;
+  color: black;
+  margin: 2px 0px;
+}
+
 .video_small {
   width: 280px;
   height: 157px;
