--- a/app/views/main/_video_card_handlebar.html.erb
+++ b/app/views/main/_video_card_handlebar.html.erb
@@ -1,4 +1,4 @@
-<script id="idvideo_card_template" type="x-handlebars-template">
+<script id="video_card_template" type="x-handlebars-template">
 	{{#each videos}}
 		<%= render 'video_card' %>
 	{{/each}}
