--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -1,3 +1,4 @@
+<%= form_tag("/videos/filters_test", name: 'filters') do %>
 <div id="left-menu">
 	<div class="menu_item row">		
 		<div class="row">
@@ -85,3 +86,4 @@
     	<input name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipScore" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
     </div>
 </div>
+<% end %>
