--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -22,6 +22,8 @@
       <div class="header_panel row">
         <div class="numResults col-md-5">7160 results</div>        
         <div class="dropdown col-md-2">
+          <%= form_tag("/videos/filters_test", name: 'filters') do %>
+            <input id="page" name="page" value=1 type="hidden">
             <button class="btnSort btn dropdown-toggle" type="button" id="btnSort" data-toggle="dropdown" aria-expanded="true"><span class="selection">SORT</span> <span class="caret"></span></button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
               <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Default</a></li>
@@ -32,6 +34,7 @@
               <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Most Recent First</a></li>
               <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Oldest First</a></li>
             </ul>
+          <% end %>
         </div>                
 
         <%= render 'view_menu_box' %>
