--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -17,12 +17,12 @@
 	    </div>
 	</div>		
 
-	<div class="menu_item row">
+	<!-- <div class="menu_item row">
 		<div class="row">
 			<div class="col-md-8">Number of Singers</div><div class="strVar">3 - 5</div>
 		</div>
 		<input name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipNumSingers" data-slider-min="1" data-slider-max="7" data-slider-step="1" data-slider-value="[1,7]"/>
-	</div>
+	</div> -->
 
 	<div class="menu_item row">
 		<div class="row">
@@ -64,17 +64,21 @@
     	<div class="row">
 			<div class="col-md-8">English percentage</div><div class="strVar">0 - 100</div>
 		</div>
-    	<input name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipEP" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
+    	<input id="ipEP" name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipEP" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
+    	<input id="epMin" name="english_percentage[min]" type="hidden" value="0">
+    	<input id="epMax" name="english_percentage[max]" type="hidden" value="100">
     </div>
 
     <div class="menu_item row">
     	<div class="row">
 			<div class="col-md-8">Approval Rating</div><div class="strVar">0 - 100</div>
 		</div>
-    	<input name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipAR" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
-    </div>
+    	<input id="ipAR" name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipAR" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
+    	<input id="arMin" name="approval_rating[min]" type="hidden" value="0">
+    	<input id="arMax" name="approval_rating[max]" type="hidden" value="100">
+    </div>    
 
-    <div class="menu_item row">
+    <!-- <div class="menu_item row">
     	<div class="row">
 			<div class="col-md-8">Year</div><div class="strVar">2000 - 2015</div>
 		</div>
@@ -86,6 +90,6 @@
 			<div class="col-md-8">Score</div><div class="strVar">0 - 100</div>
 		</div>
     	<input name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipScore" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
-    </div>
+    </div> -->
 </div>
 <% end %>
