binding slider with data

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -53,6 +53,18 @@
 #ipNumSingers .slider-handle {
 	background: rgb(255,255,255);
 }
+#ipHN .slider-selection {
+	background: rgb(116,200,206);
+}
+#ipHN .slider-handle {
+	background: rgb(255,255,255);
+}
+#ipCN .slider-selection {
+	background: rgb(116,200,206);
+}
+#ipCN .slider-handle {
+	background: rgb(255,255,255);
+}
 #ipEP .slider-selection {
 	background: rgb(116,200,206);
 }
