--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -62,6 +62,24 @@
 
     <div class="menu_item row">
     	<div class="row">
+			<div class="col-md-8">Hotness</div><div class="strVar">0 - 10</div>
+		</div>
+    	<input id="ipHN" name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipHN" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="[0,10]"/>
+    	<input id="hnMin" name="hotness[min]" type="hidden" value="0">
+    	<input id="hnMax" name="hotness[max]" type="hidden" value="10">
+    </div>
+
+    <div class="menu_item row">
+    	<div class="row">
+			<div class="col-md-8">Cheesiness</div><div class="strVar">0 - 10</div>
+		</div>
+    	<input id="ipCN" name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipCN" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="[0,10]"/>
+    	<input id="cnMin" name="cheesiness[min]" type="hidden" value="0">
+    	<input id="cnMax" name="cheesiness[max]" type="hidden" value="10">
+    </div>
+
+    <div class="menu_item row">
+    	<div class="row">
 			<div class="col-md-8">English percentage</div><div class="strVar">0 - 100</div>
 		</div>
     	<input id="ipEP" name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipEP" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="[0,100]"/>
