--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -13,6 +13,7 @@
     <% @collections.each do |collection| %>
       <tr>
         <td><%= collection.name %></td>
+        <td><%= collection.user_id %></td>
         <td><%= link_to 'Show', collection %></td>
         <td><%= link_to 'Edit', edit_collection_path(collection) %></td>
         <td><%= link_to 'Destroy', collection, method: :delete, data: { confirm: 'Are you sure?' } %></td>
